--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
       <i class="fa-solid fa-phone"></i> 
       <a href="#">+91 7819057210</a>
     </li>
+     <li>
+    <i class="fa-brands fa-linkedin"></i> 
+    <a href="https://www.linkedin.com/in/yourusername/" target="_blank">LinkedIn</a>
+  </li>
   </ul>
 </div>
 </main>
