--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Yash Agrawal Portfolio</title>
     <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -81,10 +81,16 @@
     </li>
      <li>
     <i class="fa-brands fa-linkedin"></i> 
-    <a href="https://www.linkedin.com/in/yourusername/" target="_blank">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/yash-agrawal-b69818273/" target="_blank">LinkedIn</a>
   </li>
   </ul>
 </div>
+    <div>
+        <a href="timetable.html" class="subHeadings">View My Time Table</h3>
+        <div>
+            
+        </div>
+    </div>
 </main>
 </body>
 </html>
